--- a/index.html
+++ b/index.html
@@ -3,53 +3,162 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FlashWash - Home</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>FlashWash – Your Car. Always Clean.</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Roboto', sans-serif; }
-    @keyframes spin-slow {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f9fa;
+      color: #333;
     }
-    .animate-spin-slow {
-      animation: spin-slow 10s linear infinite;
+    nav {
+      background-color: #003366;
+      padding: 15px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 20px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    header {
+      background-image: url('https://images.unsplash.com/photo-1610923318186-ecb55a78c116?auto=format&fit=crop&w=1500&q=80');
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 100px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 52px;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 4px #00000088;
+    }
+    header p {
+      font-size: 22px;
+      margin-bottom: 30px;
+      text-shadow: 1px 1px 2px #00000088;
+    }
+    header a {
+      background: #00cc99;
+      color: white;
+      padding: 15px 30px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 30px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    }
+    section {
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .three-columns {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 30px;
+    }
+    .card {
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      padding: 25px;
+      width: 280px;
+      transition: transform 0.2s;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card h3 {
+      margin-bottom: 10px;
+      color: #003366;
+    }
+    .partner-section {
+      background: #e6f2ff;
+    }
+    footer {
+      background: #003366;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    @media (max-width: 768px) {
+      header h1 { font-size: 36px; }
+      .card { width: 100%; max-width: 320px; }
     }
   </style>
 </head>
-<body class="bg-white text-gray-800">
+<body>
 
-  <!-- Navigation Bar -->
-  <header class="bg-[#2a3c44] text-white py-4">
-    <div class="max-w-6xl mx-auto flex justify-between items-center px-6">
-      <div class="flex items-center space-x-4">
-        <img src="flashwash-logo.png" alt="FlashWash Logo" class="h-10 animate-spin-slow">
-        <span class="text-xl font-bold">FlashWash</span>
-      </div>
-      <nav>
-        <ul class="flex space-x-6 text-sm">
-          <li><a href="index.html" class="underline font-bold">Home</a></li>
-          <li><a href="pricing.html" class="hover:underline">Plans</a></li>
-          <li><a href="partner.html" class="hover:underline">Partner</a></li>
-          <li><a href="faq.html" class="hover:underline">FAQ</a></li>
-          <li><a href="contact.html" class="hover:underline">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#how">How It Works</a>
+    <a href="#pricing">Pricing</a>
+    <a href="#partners">Partners</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <header id="home">
+    <h1>Your Car. Always Clean.</h1>
+    <p>Subscribe. Find a Partner. Get Washed — Anywhere.</p>
+    <a href="#pricing">Subscribe Now</a>
   </header>
 
-  <!-- Hero Section -->
-  <main class="text-center py-20 px-6">
-    <h1 class="text-5xl font-bold text-[#2a3c44] mb-6">Welcome to FlashWash</h1>
-    <p class="text-lg text-gray-600 mb-8">Your subscription-based car wash network</p>
-    <div class="space-x-4">
-      <a href="pricing.html" class="bg-[#38b2ac] text-white px-6 py-3 rounded hover:bg-[#319e9a]">Subscribe Now</a>
-      <a href="partner.html" class="bg-[#2a3c44] text-white px-6 py-3 rounded hover:bg-[#1f2e35]">Become a Partner</a>
+  <section id="how">
+    <h2>How It Works</h2>
+    <div class="three-columns">
+      <div class="card">
+        <h3>1. Subscribe</h3>
+        <p>Choose a monthly plan that fits your needs.</p>
+      </div>
+      <div class="card">
+        <h3>2. Find a Car Wash</h3>
+        <p>Use the app to locate the nearest partner wash station.</p>
+      </div>
+      <div class="card">
+        <h3>3. Scan & Wash</h3>
+        <p>Show your QR code and get your car washed, cash-free.</p>
+      </div>
     </div>
-  </main>
+  </section>
 
-  <!-- Footer -->
-  <footer class="text-center text-sm text-gray-500 py-6">
-    &copy; 2025 FlashWash. All rights reserved.
+  <section id="pricing">
+    <h2>Subscription Plans</h2>
+    <div class="three-columns">
+      <div class="card">
+        <h3>Basic</h3>
+        <p><strong>R99/month</strong></p>
+        <p>2 washes/month</p>
+      </div>
+      <div class="card">
+        <h3>Premium</h3>
+        <p><strong>R199/month</strong></p>
+        <p>4 washes/month + priority access</p>
+      </div>
+      <div class="card">
+        <h3>Family</h3>
+        <p><strong>R299/month</strong></p>
+        <p>Up to 3 cars under one account</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="partner-section" id="partners">
+    <h2>Are You a Car Wash Owner?</h2>
+    <p>Join our platform and receive steady, loyal customers on subscription.</p>
+    <a href="mailto:info@flashwash.co.za" style="font-weight: bold; color: #003366;">Become a Partner</a>
+  </section>
+
+  <footer id="contact">
+    <p>&copy; 2025 FlashWash. All rights reserved.</p>
+    <p>Email: info@flashwash.co.za</p>
   </footer>
 
 </body>
